# Comfyui_NyaaCraft

./: .gitignore  README.md  __init__.py  build_library.py  pyproject.toml  requirements.txt
js/: prompt_library.js
library_src/: 00_画师串.json  01_OC杂项.json  01_各种风格.json  02_人外种族.json  02_角色.json  03_各式服装.json  03_服饰.json  04_人物转化.json  04_涩涩服饰.json  05_日常_正装服饰.json  05_行为.json  06_人物职业服饰.json  06_重口行为.json  07_民族特色服饰.json  08_中东.json  09_幻想人物服饰.json  10_各式场景.json  11_场景.json  12_日常生活.json  13_室内.json  14_表情包_搞怪.json  15_情感动作.json  16_战斗华丽.json  17_节日庆典.json  18_恐怖扭曲.json  19_幻想童话.json  20_单纯场景.json  21_特殊画面.json  22_多人互动.json  23_人物形象.json  24_人物环境.json  25_特别收录.json  26_基础涩.json  27_其他.json  28_各种涩涩.json  29_视角_强调.json  30_杂项.json  31_1girl系列.json  32_另类日常.json  33_1girl,1boy系列.json  (+8 more)
nodes/: freellm_chat.py  nsfw_market.py  prompt_library.py
tools/: _tree.txt  gen_library_src.py
